aks-poland-central/apps/kurento-one2one/kurento-one2one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kms
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kms
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: kms
    spec:
      containers:
      - name: kms
        image: kurento/kurento-media-server:latest
        # image: kurento/kurento-media-server:6.7.1-xenial
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
      # Uncomment this if you want to deploy a sidecar container to sniff traffic
      # - name: net-debug
      #   image: l7mp/net-debug:latest
      #   command: ["/bin/sh"]
      #   args: ["-c", "while true; do echo hello; sleep 10;done"]

---
apiVersion: v1
kind: Service
metadata:
  name: kms
  labels:
    app: kms
spec:
  selector:
    app: kms
  ports:
    - port: 8888
      protocol: TCP
      name: kms-port
    - port: 9999
      protocol: UDP
      name: kms-media-plane-port


# WebRTC application server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webrtc-server
  # namespace: stunner
spec:
  selector:
    matchLabels:
      app: webrtc-server
  replicas: 1
  template:
    metadata:
      labels:
        app: webrtc-server
    spec:
      containers:
      - name: webrtc-server
        image: l7mp/kurento-one2one-call-server
        imagePullPolicy: Always
        # image: localhost/l7mp/kurento-one2one-call-server
        # imagePullPolicy: Never
        # command: [ "sleep" ]
        # args: [ "infinity" ]
        command: ["npm"]
        args: ["start", "--", "--as_uri=https://0.0.0.0:8443", "--ws_uri=ws://kms:8888/kurento"]
        ports:
        - containerPort: 8443
        # TURN server config to return to the user
        volumeMounts:
          - name: webrtc-server-tls
            mountPath: "/app/keys"
            readOnly: true
      volumes:
        - name: webrtc-server-tls
          secret:
            secretName: webrtc-server-secret
            items:
              - key: tls.crt
                path: server.crt
              - key: tls.key
                path: server.key

---
apiVersion: v1
kind: Service
metadata:
  name: webrtc-server
  labels:
    app: webrtc-server
spec:
  selector:
    app: webrtc-server
  ports:
    - port: 8443
      protocol: TCP
      name: webrtc-server-port
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kurento-one2one
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - one2one.aks-poland-central.stunner.cc
    secretName: one2one-secret-tls
  rules:
  - host: one2one.aks-poland-central.stunner.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webrtc-server
            port:
              number: 8443
